--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,15 @@
 @import "~bootstrap/scss/bootstrap";
+
+.navbar-brand {
+  h1 {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    .logo-text {
+      display: inline-block;
+    }
+    img {
+      vertical-align: middle;
+    }
+  }
+}
