--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
+body {
+  background-color: #efefef;
+}
+
 .navbar-brand {
   h1 {
     font-size: 1rem;
@@ -17,7 +21,10 @@
 }
 
 .visualization {
-  border: 1px solid green;
   min-height: 500px;
   width: 100%;
+}
+
+.viz-form {
+  padding-top: 1rem;
 }
